--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,6 +9,7 @@
     </div>
     <div class="container">
         <h1 class="flex">CBC WEB APP</h1>
+        <p>Web application pour la gestion de vos recommandations</p>
     </div>
 </main>
 {% endblock %}
