--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+    {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+    {% block stylesheets %}
+    {{ encore_entry_link_tags('app') }}
+    {% endblock %}
+
+    {% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+    {% endblock %}
+</head>
+
+<body>
+    <div class="container">
+        <nav>
+            <ul>
+                <li><strong><a href={{path('home')}}>CBC WebApp</a></strong></li>
+            </ul>
+            <ul>
+                {% if is_granted('ROLE_USER') %}
+                <li><a href="#">Recos</a></li>
+                <li><a href="#">Profil</a></li>
+                <li><a href={{path('app_logout')}}>Déconnexion</a></li>
+                {% else %}
+                <li><a href={{path('app_login')}}>Connexion</a></li>
+                {% endif %}
+            </ul>
+        </nav>
+    </div>
+
+    {% block body %}{% endblock %}
+</body>
+
 </html>
