--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <main>
     <div class="container">
-        <form method="post">
+        <form method="post" name="form-login">
             {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
             {% endif %}
@@ -38,7 +38,7 @@
             </div>
             #}
 
-            <button class="btn btn-lg btn-primary" type="submit">
+            <button name="btn-login" class="btn btn-lg btn-primary" type="submit">
                 Se connecter
             </button>
         </form>
