--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -1,4 +1,22 @@
+body{
+    min-height: 100vh;
+}
 .flex{
     display: flex;
     justify-content: center;
+}
+.listing{
+    min-height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.reco-card{
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+    padding: 10px;
+    border: solid white 2px;
 }
