--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AppController!{% endblock %}
+{% block title %}CBC WEB APP{% endblock %}
 
 {% block body %}
 <main>
