--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
             </ul>
             <ul>
                 {% if is_granted('ROLE_USER') %}
-                <li><a href="#">Recos</a></li>
+                <li><a href={{path('recos_read')}}>Recos</a></li>
                 <li><a href="#">Profil</a></li>
                 <li><a href={{path('app_logout')}}>Déconnexion</a></li>
                 {% else %}
