--- a/templates/app/read-recos.html.twig
+++ b/templates/app/read-recos.html.twig
@@ -7,7 +7,7 @@
     Filtrer par:
 </div>
 <div class="listing">
-    {% for reco in receivedRecos %}
+    {% for reco in app.user.receivedRecos %}
     <div class="reco-card">
         <p>Envoyée le {{reco.createdAt | date("d/m/Y")}}</p>
         <p>par {{reco.sender.firstname}} {{reco.sender.lastname}}</p>
