--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
     <div class="container">
         <nav>
             <ul>
-                <li><strong><a href={{path('home')}}>CBC WebApp</a></strong></li>
+                <li><strong><a href={{path('home')}}>Cedric WebApp</a></strong></li>
             </ul>
             <ul>
                 {% if is_granted('ROLE_USER') %}
