--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -20,3 +20,12 @@ body{
     padding: 10px;
     border: solid white 2px;
 }
+.membre-card{
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+    padding: 10px;
+    border: solid white 2px;
+}
