--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -4,6 +4,12 @@ body{
 .flex{
     display: flex;
     justify-content: center;
+    align-items: flex-end;
+}
+.flex-column{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .listing{
     min-height: 100%;
@@ -21,11 +27,13 @@ body{
     border: solid white 2px;
 }
 .membre-card{
-    width: 300px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin: 10px;
-    padding: 10px;
+    justify-content: space-between;
+    width: 300px;
+    margin: 5px;
     border: solid white 2px;
+}
+.membre-card img{
+    width: 96px;
 }
